// generated by openapi-gen-protobuf

syntax = "proto3";

package erda.openapiv1.msp; // remove 'openapiv1.' when you make this proto file effective

option go_package = "github.com/erda-project/erda-proto-go/openapiv1/msp/tenant/pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";

import "common/openapi.proto";
import "common/identity.proto";

message CREATE_TENANTS_Request {
}
message GET_TENANTS_Request {
}
// generate service from openapi spec: msp_tenant
service msp_tenant {
    option (erda.common.openapi_service) = {
        service: "msp",
    };

    rpc CREATE_TENANTS (CREATE_TENANTS_Request) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/api/msp/tenant",
        };
        option (erda.common.openapi) = {
            path: "/api/msp/tenant",
            auth: {
                no_check: false,
                check_login: true,
                try_check_login: false,
                check_token: true,
                check_basic_auth: false,
            },
            doc: "Create MSP tenant",
        };
    };
    rpc GET_TENANTS (GET_TENANTS_Request) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            get: "/api/msp/tenant",
        };
        option (erda.common.openapi) = {
            path: "/api/msp/tenant",
            auth: {
                no_check: false,
                check_login: true,
                try_check_login: false,
                check_token: true,
                check_basic_auth: false,
            },
            doc: "GET MSP tenant",
        };
    };
}
